# vhalinor-iag

./: .yaml  01_config.py  02_data_collector.py  03_technical_analysis..py  04 pattern_recognition.py  05_neural_network.py  06_prediction_engine.py  07_risk_management.py  08_execution_engine.py  09_main_system.py  10_sensory_system.py  11_run.py  11_run.sh  12_requirements.py  12_requirements.txt  12_requirements_fixed.txt  13_docker-compose.py  14_Dockerfile.py  15_memory_learning.py  AdvancedNeuralEngine.py  AdvancedPatternRecognition.py  AdvancedPredictionDashboard.py  AdvancedPredictionService.py  AdvancedRiskAnalyzer.py  AdvancedTemporalNetwork.py  AutoTraderSimulation.py  AutomationService.py  AutonomousCreator.py  AutonomousDecisionEngine.py  AutonomousManager.py  AutonomousNeuralCreator.py  AutonomousTradingController.py  AutonomousValidationService.py  DOCUMENTATION.md  ENHANCED_JAVA_TRADING_AI_REPORT.md  Indicador_vhalinor.py  Iniciar_Vhalinor.bat  Inteligencia_artificial_central_enhanced.py  PKG-INFO  QUICKSTART.md  (+164 more)
