[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "vhalinor-ai-geral"
version = "6.0.0"
description = "Professional AI Trading System with Advanced Cognitive Capabilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "VHALINOR Team", email = "contact@vhalinor.ai"}
]
maintainers = [
    {name = "VHALINOR Team", email = "contact@vhalinor.ai"}
]
keywords = [
    "artificial-intelligence",
    "machine-learning",
    "deep-learning",
    "trading",
    "cryptocurrency",
    "blockchain",
    "neural-networks",
    "nlp",
    "computer-vision",
    "real-time",
    "automation",
    "backtesting",
    "portfolio-management",
    "risk-analysis",
    "predictive-modeling"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.9"
dependencies = [
    # Core Data Science & Computing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    
    # Deep Learning Frameworks
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "tensorflow>=2.15.0",
    "keras>=2.15.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
    
    # Web & UI Frameworks
    "streamlit>=1.28.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "dash>=2.14.0",
    
    # Data Validation & Configuration
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    
    # Trading & Financial Analysis
    "ccxt>=4.1.0",
    "yfinance>=0.2.18",
    "backtrader>=1.9.76.123",
    "vectorbt>=0.25.0",
    "ta>=0.10.2",
    "mplfinance>=0.12.9b",
    
    # AI & Natural Language Processing
    "transformers>=4.36.0",
    "spacy>=3.7.2",
    "sentence-transformers>=2.2.2",
    "openai>=1.3.0",
    "nltk>=3.8.1",
    
    # Visualization & Dashboard
    "plotly>=5.17.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "bokeh>=3.2.0",
    
    # Async & Real-time Communication
    "websockets>=12.0",
    "redis>=5.0.1",
    "aiohttp>=3.9.0",
    "aioredis>=2.0.1",
    "httpx>=0.25.0",
    
    # Blockchain & Web3
    "web3>=6.11.0",
    "eth-account>=0.9.0",
    "solana>=0.30.2",
    
    # Automation & Testing
    "selenium>=4.15.2",
    "pyautogui>=0.9.54",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    
    # Logging & Monitoring
    "rich>=13.7.0",
    "loguru>=0.7.2",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    
    # Utilities & System
    "requests>=2.31.0",
    "tenacity>=8.2.3",
    "psutil>=5.9.6",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    
    # PDF Processing
    "PyPDF2>=2.0.0",
    "pdfplumber>=0.6.0",
    "pymupdf>=1.20.0",
    "pdfminer.six>=20220519",
    
    # Financial Analysis
    "yfinance>=0.1.87",
    "ccxt>=4.0.0",
    "backtrader>=1.9.76.123",
    "ta-lib>=0.4.25",
    
    # Database & Storage
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "pymongo>=4.5.0",
    "chromadb>=0.4.0",
    
    # Configuration & Environment
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "toml>=0.10.2",
    
    # Logging & Monitoring
    "structlog>=23.2.0",
    "rich>=13.7.0",
    "loguru>=0.7.2",
    
    # Async & Concurrency
    "asyncio-mqtt>=0.13.0",
    "celery>=5.3.0",
    "concurrent-futures>=3.1.1",
    
    # Testing & Quality
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
    
    # Automation & Web
    "selenium>=4.15.0",
    "pyautogui>=0.9.54",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.10.0",
    
    # Blockchain & Web3
    "web3>=6.11.0",
    "eth-account>=0.10.0",
    
    # Windows Specific
    "pywin32>=306; sys_platform == 'win32'",
    
    # Development Tools
    "jupyter>=1.0.0",
    "ipython>=8.17.0",
    "notebook>=7.0.0",
    "streamlit>=1.28.0",
    "dash>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
    "isort>=5.12.0",
    "bandit>=1.7.5",
]

gpu = [
    "torch-audio>=0.11.0",
    "tensorflow>=2.13.0",
    "cupy-cuda11x>=12.0.0",
]

quantum = [
    "qiskit>=0.45.0",
    "pennylane>=0.33.0",
]

all = [
    "vhalinor-ai-geral[dev,gpu,quantum]"
]

[project.urls]
Homepage = "https://github.com/vhalinor/vhalinor-ai-geral"
Documentation = "https://vhalinor-ai-geral.readthedocs.io/"
Repository = "https://github.com/vhalinor/vhalinor-ai-geral.git"
"Bug Tracker" = "https://github.com/vhalinor/vhalinor-ai-geral/issues"

[project.scripts]
vhalinor-ai = "vhalinor_ai_geral.main:main"
vhalinor-dashboard = "vhalinor_ai_geral.dashboard:main"
vhalinor-trader = "vhalinor_ai_geral.trading:main"
vhalinor-test = "vhalinor_ai_geral.tests:run_all_tests"

[tool.setuptools.packages.find]
where = ["."]
include = ["vhalinor_ai_geral*", "config*", "core*", "modules*", "services*", "utils*"]

[tool.setuptools.package-data]
vhalinor_ai_geral = ["*.json", "*.yaml", "*.yml", "*.txt", "*.md"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313', 'py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["vhalinor_ai_geral"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg-info"
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "pandas.*",
    "scipy.*",
    "sklearn.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "opencv.*",
    "torch.*",
    "transformers.*",
    "spacy.*",
    "nltk.*",
    "redis.*",
    "web3.*",
    "selenium.*",
    "pyautogui.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
    "quantum: marks tests that require quantum simulator"
]

[tool.coverage.run]
source = ["vhalinor_ai_geral"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.env/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
